--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -5,6 +5,9 @@
   flex-direction: column;
   margin: auto;
   padding-right:132px;
+  -webkit-user-select: auto; /* Safari */
+  -ms-user-select: auto; /* IE 10 and IE 11 */
+  user-select: auto; /* Standard syntax */
 }
 
 .contacts h1 {
@@ -27,7 +30,7 @@
   line-height: normal;
   padding: 0px;
   margin: 0px;
-  margin-top: 45px;
+  margin-top: 35px;
 }
 
 .contacts p {
@@ -37,29 +40,27 @@
   font-weight: 400;
   line-height: normal;
   width: 500px;
-  margin-top: 0px;
-}
-
-.contacts h2:first-child {
-  margin-top:80px;
-}
-
-.contacts img {
-  cursor: pointer;
-  width: 70px;
+  margin: 0px;
 }
 
 .media {
   display: flex;
   flex-direction: row;
-  margin-top: 45px;
+  margin-top: 25px;
 }
 
+.same img, .same-scroll img{
+  width: 60px;
+  cursor: pointer;
+}
+
+.same-scroll img{
+  margin-right: 20px;
+}
 .same {
   position:relative;
   width: 70px;
-  height: 70px;
-  margin-right: 20px;
+  margin-right: 15px;
 }
 
 .same .full {
@@ -77,10 +78,56 @@
 .full{
   display: none;
 }
-.empty:hover{
+.same .empty:hover{
   display: none;
 }
 
-.full:hover{
+.same .full:hover{
   display: block;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+} 
+
+.skill {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  margin-left:-24px;
+}
+
+.horizontal p{
+  font-size: 20px;
+  width:270px;
+  margin-top: 5px;
+}
+
+.skill img {
+  width: 15px;
+  margin-right: 10px;
+}
+
+.frame{
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: end;
+  margin-left:-30px;
+}
+
+.frame img {
+  width: 25px;
+  margin-right: 10px;
 }
