--- a/src/css/personal.css
+++ b/src/css/personal.css
@@ -7,7 +7,7 @@
   padding-right: 68px;
 }
 
-.about h2 {
+.about h2{
   font-size: 48px;
   font-weight: 600;
   line-height: 90%;
@@ -16,16 +16,18 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
 .about h3 {
   width:auto;
   margin: 0px;
-  margin-right: 14px;
+  margin-right: 10px;
   font-size: 24px;
   font-weight: 500;
   line-height: normal;
 }
 
 .about p {
+  margin-top: 5px;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -36,7 +38,7 @@
   display: flex;
   flex-direction: row;
   justify-content: start;
-  align-items: start;
+  align-items: center;
   margin: 0px;
   margin-top: 30px;
 }
@@ -46,6 +48,10 @@
 }
 
 .subheader .book, .subheader .at {
+  width: 15px;
+}
+
+.subheader .ml {
   width: 20px;
 }
 
