--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -12,7 +12,7 @@
   margin-top: 3px;
   overflow-x: hidden;
   overflow-y: auto;
-  height: 723px;
+  height: 715px;
   max-height: 1000px;
 }
 
@@ -43,7 +43,7 @@
   margin-right: 10px;
 }
 
-.left-cards {
+.left-cards, .left-cards-scroll {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -54,7 +54,10 @@
   left:20px;
 }
 
-.right-cards {
+.left-cards-scroll{
+  top:190px;
+}
+.right-cards, .right-cards-scroll {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,6 +66,10 @@
   position: absolute;
   top: 100px;
   right:20px;
+}
+
+.right-cards-scroll{
+  top:70px;
 }
 
 .left-2{
@@ -143,6 +150,7 @@
   margin-top: 30px;
   width: 520px;
   border-radius: 20px; 
+  user-select: none;
 }
 
 .down {
@@ -156,4 +164,15 @@
   border: none;
   color: black;
   z-index: 4;
+}
+
+.resume-title {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 90%;
+  padding: 0px;
+  border-bottom: #95C086 7px solid;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  text-align: center;
 }
