--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -9,6 +9,10 @@
     cursor: default;
 }
 
+.small {
+    background-color: aliceblue;
+}
+
 .clickable:hover, .selected:hover {
    cursor: pointer;
 }
